add TypeReader and TypeWriter for multiple type code processing

--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,17 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>kr.inode.bons</groupId>
+	<groupId>kr.inode.tbon</groupId>
 	<artifactId>tbon</artifactId>
 	<version>0.1-SNAPSHOT</version>
 	<name>Typed Binary Object Notation</name>
 	<properties>
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.release>1.7</maven.compiler.release>
+		<maven.compiler.testSource>1.8</maven.compiler.testSource>
+		<maven.compiler.testTarget>1.8</maven.compiler.testTarget>
+		<maven.compiler.testRelease>1.8</maven.compiler.testRelease>
 		<encoding>UTF-8</encoding>
 		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>${encoding{</project.reporting.outputEncoding>
